--------------------------------------------------------------------------------
drkns 26.11.2022 10:33:29 +0000 - build 6057

1. Fix empty sort criteria menus handling.

2. Optimize map file lookup.

--------------------------------------------------------------------------------
drkns 24.11.2022 21:22:23 +0000 - build 6056

1. Fix detach from WT & properly handle alternative buffers.

2. Refactoring, move plarform-specific code around.

--------------------------------------------------------------------------------
drkns 18.11.2022 17:50:19 +0000 - build 6055

1. Refactoring, move plarform-specific code around.

--------------------------------------------------------------------------------
yjh 17.11.2022 14:10:56 +0300 - build 6054

1. SQLite v3.40.0

--------------------------------------------------------------------------------
zg 15.11.2022 22:58:04 +0200 - build 6053

1. forum: quick view not updated after removing file from temporary panel.

--------------------------------------------------------------------------------
drkns 15.11.2022 00:59:12 +0000 - build 6052

1. 0003966: Correction of 5998 again.

--------------------------------------------------------------------------------
drkns 10.11.2022 17:40:00 +0000 - build 6051

1. gh-483: Change histories items order.

--------------------------------------------------------------------------------
drkns 09.11.2022 19:37:38 +0000 - build 6050

1. Recognize reparse point types on plugin panels.

--------------------------------------------------------------------------------
drkns 08.11.2022 19:47:00 +0000 - build 6049

1. Correction of 6047.

--------------------------------------------------------------------------------
drkns 08.11.2022 17:08:16 +0000 - build 6048

1. Correction of 6047.

--------------------------------------------------------------------------------
drkns 07.11.2022 22:07:21 +0000 - build 6047

1. Microsoft keeps fixing things that ain't broken.