@@ -262,6 +262,8 @@ unsigned char palette::Default(size_t const Index) const
 
 void palette::Set(size_t StartOffset, span<FarColor> Values)
 {
+	assert(Values.size() + StartOffset < CurrentPalette.size());
+
 	std::copy(ALL_CONST_RANGE(Values), CurrentPalette.begin() + StartOffset);
 	PaletteChanged = true;
 }
@@ -274,6 +276,8 @@ void palette::CopyTo(span<FarColor> const Destination) const
 
 const FarColor& palette::operator[](size_t const Index) const
 {
+	assert(Index < CurrentPalette.size());
+
 	return CurrentPalette[Index];
 }
 
