@@ -1,4 +1,13 @@
 --------------------------------------------------------------------------------
+drkns 27.11.2022 19:25:18 +0000 - build 6058
+
+1. Refactoring.
+
+2. Warnings.
+
+3. More tests.
+
+--------------------------------------------------------------------------------
 drkns 26.11.2022 10:33:29 +0000 - build 6057
 
 1. Fix empty sort criteria menus handling.
